--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   }
   
   .box {
-    background-color: #444;
+    background-color: #444444;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
@@ -37,18 +37,19 @@ body {
   
   #addBtn {
     width: 100%;
-    background-color: #ff6b6b;
+    background-color:  #3fc0ec;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
   #addBtn:hover {
-    background-color: #ff5252;
+    background-color: #2250ce;
   }
   
   ul {
     list-style-type: none;
+    
     padding: 0;
   }
   
@@ -62,12 +63,12 @@ body {
   }
   
   li:hover {
-    background-color: #555;
+    background-color: #caa9f0;
   }
   
   li.done {
     text-decoration: line-through;
-    color: #999;
+    color: #999999;
   }
   
   li i {
